--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
-    "git-commit-msg-linter": "^3.0.0",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.3",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3", 
+    "@types/node-fetch": "^2.5.8",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
-    "eslint": "^7.12.1"
+    "eslint": "^7.12.1",
+    "git-commit-msg-linter": "^3.0.0",
+    "husky": "^4.3.8",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.1"
   }
 }
