refactor: project name xD

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "menon-trace-log",
+  "name": "menon-log-trace",
   "version": "1.0.0",
   "main": "index.js",
   "author": "pedromoraisf <pedro.morais1997@gmail.com>",
