--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "menon-log-trace",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Log trace client 💫",
+  "main": "dist/src/ain/index.js",
   "author": "pedromoraisf <pedro.morais1997@gmail.com>",
   "license": "MIT",
+  "homepage": "https://github.com/pedromoraisf/menon-log-trace#readme",
+  "bugs": {
+    "url": "https://github.com/pedromoraisf/menon-log-trace/issues"
+  },
   "scripts": {
+    "clean": "rm -rf ./dist",
+    "build": "yarn clean && tsc",
     "lint": "eslint ./src --ext .ts",
     "lint:fix": "yarn lint --fix",
     "test": "jest --passWithNoTests --noStackTrace --runInBand",
