--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,10 @@
     "esModuleInterop": true,
     "allowJs": true,
     "strictNullChecks": true
-  }
+  }, 
+  "exclude": [
+    "jest.**",
+    "jest-**",
+    "./coverage"
+  ]
 }
