--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,6 +1,6 @@
 {
   "hooks": { 
     "pre-commit": "lint-staged",
-    "pre-push": "yarn build && yarn test:ci"
+    "pre-push": "yarn test:ci"
   }
 }
