--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "menon-log-trace",
   "version": "1.0.0",
   "description": "Log trace client 💫",
-  "main": "dist/src/ain/index.js",
+  "main": "dist/src/main/index.js",
   "author": "pedromoraisf <pedro.morais1997@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/pedromoraisf/menon-log-trace#readme",
