--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "menon-log-trace",
-  "version": "1.0.1",
+  "version": "1.0.5",
   "description": "Log trace client 💫",
-  "main": "dist/src/main/index.js",
+  "main": "./dist/main/index.js",
   "author": "pedromoraisf <pedro.morais1997@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/pedromoraisf/menon-log-trace#readme",
@@ -36,6 +36,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "node-fetch": "2.6.1"
   }
 }
