chore: add tsconfig options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
+    "target": "es5",
+    "declaration": true,
     "outDir": "./dist",
     "module": "commonjs",
-    "target": "es2019",
     "esModuleInterop": true,
     "allowJs": true,
     "strictNullChecks": true,
@@ -20,6 +21,8 @@
   "exclude": [
     "jest.**",
     "jest-**",
-    "./coverage"
+    "./coverage", 
+    "node_modules", 
+    "dist"
   ]
 }
