--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.5",
   "description": "Log trace client 💫",
   "main": "./dist/main/index.js",
+  "types": "./dist/main/index.d.js",
   "author": "pedromoraisf <pedro.morais1997@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/pedromoraisf/menon-log-trace#readme",
