chore: add module alias

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "menon-log-trace",
   "version": "1.0.5",
   "description": "Log trace client 💫",
-  "main": "./dist/main/index.js",
-  "types": "./dist/main/index.d.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.js",
   "author": "pedromoraisf <pedro.morais1997@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/pedromoraisf/menon-log-trace#readme",
