chore: remove test files in ts build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,19 @@
   "exclude": [
     "jest.**",
     "jest-**",
+    "**/*.spec.**",
+    "**/*.test.**",
+    "**/**/*.spec.**",
+    "**/**/*.test.**",
+    "**/**/**/*.spec.**",
+    "**/**/**/*.test.**",
+    "**/**/**/**/*.spec.**",
+    "**/**/**/**/*.test.**",
+    "**/**/**/**/**/*.spec.**",
+    "**/**/**/**/**/*.test.**",
+
     "./coverage", 
+
     "node_modules", 
     "dist"
   ]
