--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "clean": "rm -rf ./dist",
-    "build": "yarn clean && tsc",
+    "build": "yarn clean && babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "prepublish": "yarn build",
     "postpublish": "yarn clean",
     "lint": "eslint ./src --ext .ts",
@@ -25,10 +25,18 @@
     "test:ci": "yarn test --coverage"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.13",
+    "@babel/core": "^7.12.13",
+    "@babel/node": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.13",
     "@types/jest": "^26.0.20",
+    "@types/module-alias": "^2.0.0",
     "@types/node-fetch": "^2.5.8",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "babel-plugin-module-resolver": "^4.1.0",
     "codecov": "^3.8.1",
     "eslint": "^7.12.1",
     "git-commit-msg-linter": "^3.0.0",
@@ -39,8 +47,6 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "module-alias": "^2.2.2",
-    "node-fetch": "2.6.1"
+    "axios": "^0.21.1"
   }
 }
