chore: remove unnecessary lines in exclude property

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,21 +19,9 @@
     },
   }, 
   "exclude": [
-    "jest.**",
-    "jest-**",
-    "**/*.spec.**",
-    "**/*.test.**",
-    "**/**/*.spec.**",
-    "**/**/*.test.**",
-    "**/**/**/*.spec.**",
-    "**/**/**/*.test.**",
-    "**/**/**/**/*.spec.**",
-    "**/**/**/**/*.test.**",
-    "**/**/**/**/**/*.spec.**",
-    "**/**/**/**/**/*.test.**",
-
+    "jest.*",
+    "jest-*",
     "./coverage", 
-
     "node_modules", 
     "dist"
   ]
