--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "menon-log-trace",
-  "version": "1.0.7-1",
+  "version": "1.0.8",
   "description": "Log trace client 💫",
   "main": "./dist/index.js",
   "types": "./dist/index.d.js",
