--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "scripts": {
     "clean": "rm -rf ./dist",
-    "build": "yarn clean && babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
-    "prepare": "yarn build",
+    "build": "npm run clean && babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
+    "prepare": "npm run build",
     "lint": "eslint ./src --ext .ts",
-    "lint:fix": "yarn lint --fix",
+    "lint:fix": "npm run lint --fix",
     "test": "jest --passWithNoTests --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
-    "test:unit": "yarn test --watch -c jest-unit.config.js",
-    "test:integration": "yarn test --watch -c jest-integration.config.js",
-    "test:staged": "yarn test --findRelatedTests",
-    "test:ci": "yarn test --coverage"
+    "test:unit": "npm run test --watch -c jest-unit.config.js",
+    "test:integration": "npm run test --watch -c jest-integration.config.js",
+    "test:staged": "npm run test --findRelatedTests",
+    "test:ci": "npm run test --coverage"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.13",
