--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "prepare": "npm run build",
     "lint": "eslint ./src --ext .ts",
     "lint:fix": "npm run lint -- --fix",
-    "test": "jest --passWithNoTests --runInBand",
-    "test:verbose": "jest --passWithNoTests --runInBand",
+    "test": "jest --passWithNoTests",
+    "test:verbose": "jest --passWithNoTests",
     "test:unit": "npm run test -- --watch -c jest-unit.config.js",
     "test:integration": "npm run test -- --watch -c jest-integration.config.js",
     "test:staged": "npm run test -- --findRelatedTests",
