--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,16 +1,16 @@
-name: 🤖 Continuous Integration Workflow 🤖
+name: 🤖 CI/CD Workflow 🤖
 
 on:
   push:
     branches: [main]
 
 jobs:
-  build:
+  test-stage:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x]
+        node-version: [10.x, 12.x, 14.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -36,3 +36,27 @@ jobs:
       - uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+
+  npm-publish:
+    name: npm-publish
+    needs: test-stage
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Build step
+        uses: actions/setup-node@v1
+        env:
+          NODE_ENV: production
+      - run: npm install
+      - run: npm run build
+
+      - name: Publish on NPM if version has been updated
+        uses: pascalgn/npm-publish-action@1.3.6
+        with:
+          commit_pattern: "^feat: release (\\S+)"
+          workspace: "./dist"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
