--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,17 +45,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Build step
-        uses: actions/setup-node@v1
-        env:
-          NODE_ENV: production
-      - run: npm install
-      - run: npm run build
-
       - name: Publish on NPM if version has been updated
         uses: pascalgn/npm-publish-action@1.3.6
         with:
           commit_pattern: "^feat: release (\\S+)"
+          publish_command: npm install && npm run build
           workspace: "./dist"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
