--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -42,15 +42,13 @@ jobs:
     needs: test-stage
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Publish on NPM if version has been updated
-        uses: pascalgn/npm-publish-action@1.3.6
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
         with:
-          commit_pattern: "^feat: release (\\S+)"
-          publish_command: npm install && npm run build
-          workspace: "./dist"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          node-version: 10
+      - run: npm install
+      - run: npm run test:ci
+      - uses: JS-DevTools/npm-publish@v1
+        with:
+          check-version: true
+          token: ${{ secrets.NPM_AUTH_TOKEN }}
