--- a/package.json
+++ b/package.json
@@ -24,28 +24,28 @@
     "test:ci": "npm run test -- --coverage"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.13",
-    "@babel/core": "^7.12.13",
-    "@babel/node": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
-    "@babel/preset-typescript": "^7.12.13",
-    "@types/jest": "^26.0.20",
-    "@types/module-alias": "^2.0.0",
-    "@types/node-fetch": "^2.5.8",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
-    "babel-plugin-add-module-exports": "^1.0.4",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "codecov": "^3.8.1",
-    "eslint": "^7.12.1",
-    "git-commit-msg-linter": "^3.0.0",
-    "husky": "^4.3.8",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.3",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "@babel/cli": "7.12.13",
+    "@babel/core": "7.12.13",
+    "@babel/node": "7.12.13",
+    "@babel/preset-env": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
+    "@types/jest": "26.0.20",
+    "@types/module-alias": "2.0.0",
+    "@types/node-fetch": "2.5.8",
+    "@typescript-eslint/eslint-plugin": "4.6.0",
+    "@typescript-eslint/parser": "4.6.0",
+    "babel-plugin-add-module-exports": "1.0.4",
+    "babel-plugin-module-resolver": "4.1.0",
+    "codecov": "3.8.1",
+    "eslint": "7.12.1",
+    "git-commit-msg-linter": "3.0.0",
+    "husky": "4.3.8",
+    "jest": "26.6.3",
+    "lint-staged": "10.5.3",
+    "ts-jest": "26.4.4",
+    "typescript": "4.1.3"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "0.21.1"
   }
 }
